--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <java-version>1.8</java-version>
+        <java-version>1.9</java-version>
         <sl4j-version>1.5.8</sl4j-version>
     </properties>
 
@@ -33,6 +33,16 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>9</source>
+                    <target>9</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
     <dependencies>
